# c2025-a

./: .gitignore  CMakeLists.txt  README.md
level1/p01_running_letter/: main.c
level1/p02_is_prime/: main.c
level1/p03_all_primes/: main.c
level1/p04_goldbach/: main.c
level1/p05_encrypt_decrypt/: main.c
level1/p06_hanoi/: main.c
level1/p07_maze/: main.cpp
level1/p08_push_boxes/: main.cpp
level1/p09_linked_list/: main.cpp
